--- a/tokenNode/.env
+++ b/tokenNode/.env
@@ -1,3 +1,7 @@
 TOKEN_SECRET=Secret Password
-
 PORT= 8001
+
+SMTP_HOST=smtp.googlemail.com
+SMTP_PORT=465
+SMTP_USERNAME=lopera.william@gmail.com
+SMTP_PASSWORD=liodcujzjksvomqo
